schema/testdata/errors/permission_LHS_identity_comparison.keel
model User {
    fields {
        identity Identity
    }
}

model UserProject {
    fields {
        user User
        project Project
    }
}

model Project {
    fields {
        users UserProject[]
    }

    @permission(
        //expect-error:34:36:AttributeExpressionError:cannot use operator '==' with types Identity and Identity[]
        expression: ctx.identity == project.users.user.identity,
        actions: [create]
    )
}
